[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/gameplay_battle/ui/unit_detail/unit_detail.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/spear_defence.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/next_turn.png" type="Texture" id=4]
[ext_resource path="res://menu/editor/ui/assets/board.png" type="Texture" id=5]
[ext_resource path="res://menu/gameplay_battle/ui/unit_control/unit_control.gd" type="Script" id=6]

[node name="unit_control" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -225.0
margin_right = 300.0
rect_min_size = Vector2( 0, 225 )
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_right = 20.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -95.0
margin_right = 400.0
margin_bottom = 95.0
rect_min_size = Vector2( 800, 190 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 225 )
mouse_filter = 2
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer2"]
margin_right = 22.0
margin_bottom = 225.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2"]
margin_left = 26.0
margin_right = 146.0
margin_bottom = 225.0
rect_min_size = Vector2( 120, 120 )
mouse_filter = 2

[node name="ability_holder" type="VBoxContainer" parent="HBoxContainer2/MarginContainer"]
margin_right = 120.0
margin_bottom = 225.0
alignment = 2

[node name="ability" type="Button" parent="HBoxContainer2/MarginContainer/ability_holder"]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 206.0
rect_min_size = Vector2( 120, 120 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/MarginContainer/ability_holder"]
margin_top = 210.0
margin_right = 120.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 15 )

[node name="CenterContainer2" type="HBoxContainer" parent="HBoxContainer2"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 225.0
rect_min_size = Vector2( 300, 225 )
mouse_filter = 2
alignment = 1

[node name="unit_info_panel" type="HBoxContainer" parent="HBoxContainer2/CenterContainer2"]
margin_right = 300.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_vertical = 0
alignment = 1

[node name="unit_detail" parent="HBoxContainer2/CenterContainer2/unit_info_panel" instance=ExtResource( 2 )]
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer2"]
margin_left = 454.0
margin_right = 574.0
margin_bottom = 225.0
rect_min_size = Vector2( 120, 120 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/MarginContainer2"]
margin_right = 120.0
margin_bottom = 225.0
alignment = 2

[node name="end_turn" type="Button" parent="HBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 206.0
rect_min_size = Vector2( 120, 120 )
size_flags_vertical = 4
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 210.0
margin_right = 120.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 15 )

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer2"]
margin_left = 578.0
margin_right = 600.0
margin_bottom = 225.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer2/MarginContainer/ability_holder/ability" to="." method="_on_ability_pressed"]
[connection signal="pressed" from="HBoxContainer2/MarginContainer2/VBoxContainer/end_turn" to="." method="_on_end_turn_pressed"]
